@@ -1,0 +1,23 @@
+require 'rdoc/ri/ri_driver'
+
+module IRB
+  module ExtendCommand
+    module Help
+      begin
+        @ri = RiDriver.new
+      rescue SystemExit
+      else
+        def self.execute(context, *names)
+          names.each do |name|
+            begin
+              @ri.get_info_for(name.to_s)
+            rescue RiError
+              puts $!.message
+            end
+          end
+          nil
+        end
+      end
+    end
+  end
+end
